# InjectTools

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  InjectTools_v1.1.sh  LICENSE  README.md  RELEASE.md  TERMUX_BUILD.md  install.sh
.github/build-logs/: .gitkeep  README.md
.github/workflows/: release.yml  termux-release.yml
build-logs/: .gitkeep  README.md
src/: config.rs  crtsh.rs  dns.rs  main.rs  results.rs  scanner.rs  src  ui.rs  wordlist.rs
wordlists/: embedded.txt
