[package]
name = "injecttools"
version = "1.1.0"
edition = "2021"
authors = ["hoshiyomi_id <t.me/hoshiyomi_id>"]
description = "Bug Inject Scanner for Cloudflare Subdomains"
license = "MIT"

[dependencies]
# HTTP client dengan DNS resolver custom
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# DNS resolution
trust-dns-resolver = "0.23"

# CLI & TUI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

# Networking
ipnetwork = "0.20"

# File I/O & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Async runtime
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary