[package]
name = "injecttools"
version = "2.3.0"
edition = "2021"
authors = ["hoshiyomi_id <t.me/hoshiyomi_id>"]
description = "Bug Inject Scanner for Cloudflare Subdomains v2.3"
license = "MIT"
repository = "https://github.com/hoshiyomiX/InjectTools"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# DNS resolution
trust-dns-resolver = "0.23"

# CLI & TUI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
terminal_size = "0.3"

# Networking
ipnetwork = "0.20"

# File I/O & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Async
futures = "0.3"

# Date/Time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Ping
surge-ping = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"